@@ -1,6 +1,7 @@
 ## RQuantLib -- R interface to the QuantLib libraries
 ##
-## Copyright (C) 2002 - 2009 Dirk Eddelbuettel <edd@debian.org>
+## Copyright (C) 2002 - 2009 Dirk Eddelbuettel
+## Copyright (C) 2010        Dirk Eddelbuettel and Khanh Nguyen
 ##
 ## $Id$
 ##
@@ -24,8 +25,7 @@ businessDay <- function(calendar="TARGET", dates=Sys.Date()) {
   stopifnot(is.character(calendar))
   stopifnot(class(dates)=="Date")
   val <- .Call("QL_isBusinessDay",
-               list(calendar=calendar),
-               dates,
+               calendar, dates,
                PACKAGE="RQuantLib")
   val <- as.logical(val[[1]])
   names(val) <- dates
@@ -36,64 +36,61 @@ isHoliday <- function(calendar="TARGET", dates=Sys.Date()) {
   stopifnot(is.character(calendar))
   stopifnot(class(dates)=="Date")
   val <- .Call("QL_isHoliday",
-               list(calendar=calendar),
-               dates,
+               calendar, dates,
                PACKAGE="RQuantLib")
   val <- as.logical(val[[1]])
   names(val) <- dates
   val
 }
+
 isWeekend <- function(calendar="TARGET", dates=Sys.Date()) {
   stopifnot(is.character(calendar))
   stopifnot(class(dates)=="Date")
   val <- .Call("QL_isWeekend",
-               list(calendar=calendar),
-               dates,
+               calendar, dates,
                PACKAGE="RQuantLib")
   val <- as.logical(val[[1]])
   names(val) <- dates
   val
 }
+
 isEndOfMonth <- function(calendar="TARGET", dates=Sys.Date()) {
   stopifnot(is.character(calendar))
   stopifnot(class(dates)=="Date")
   val <- .Call("QL_isEndOfMonth",
-               list(calendar=calendar),
-               dates,
+               calendar, dates,
                PACKAGE="RQuantLib")
   val <- as.logical(val[[1]])
   names(val) <- dates
   val
 }
+
 endOfMonth <- function(calendar="TARGET", dates=Sys.Date()) {
   stopifnot(is.character(calendar))
   stopifnot(class(dates)=="Date")
   val <- .Call("QL_endOfMonth",
-               list(calendar=calendar),
-               dates,
+               calendar, dates,
                PACKAGE="RQuantLib")
   val <- val[[1]]
   names(val) <- dates
   val
 }
+
 adjust <- function(calendar="TARGET", dates=Sys.Date(), bdc = 0 ) {
   stopifnot(is.character(calendar))
   stopifnot(class(dates)=="Date")
   val <- .Call("QL_adjust",
-               list(calendar=calendar,
-                    bdc = as.double(bdc)),
-               dates,
+               calendar, as.double(bdc), dates,
                PACKAGE="RQuantLib")
   val <- val[[1]]
   names(val) <- dates
   val
 }
 
-
 advance <- function(calendar="TARGET", dates=Sys.Date(),
                     n, timeUnit, # call 1
                     period,      # call 2
-                   bdc = 0, emr = 0) {
+                    bdc = 0, emr = 0) {
   stopifnot(is.character(calendar))
   stopifnot(class(dates)=="Date")
   call1 <- missing(period) & !missing(n) & !missing(timeUnit)  ## or was it && ?
@@ -102,8 +99,8 @@ advance <- function(calendar="TARGET", dates=Sys.Date(),
   val <- NULL
   if (call1)
     val <- .Call("QL_advance1",
-                 list(calendar=calendar,
-                      amount = as.double(n),
+                 calendar,
+                 list(amount = as.double(n),
                       unit = as.double(timeUnit),
                       bdc = as.double(bdc),
                       emr = as.double(emr)),
@@ -111,8 +108,8 @@ advance <- function(calendar="TARGET", dates=Sys.Date(),
                  PACKAGE="RQuantLib")
   if (call2)
     val <- .Call("QL_advance2",
-                 list(calendar=calendar,
-                      period = as.double(period),
+                 calendar,
+                 list(period = as.double(period),
                       bdc = as.double(bdc),
                       emr = as.double(emr)),
                  dates,
@@ -121,7 +118,6 @@ advance <- function(calendar="TARGET", dates=Sys.Date(),
   val <- val[[1]]
   val
 }
-
 
 businessDaysBetween  <- function(calendar="TARGET",
                                  from=Sys.Date(),
@@ -133,17 +129,14 @@ businessDaysBetween  <- function(calendar="TARGET",
   stopifnot(class(from)=="Date")
   stopifnot(class(to)=="Date")
   val <- .Call("QL_businessDaysBetween",
-               list(calendar=calendar,
-                    includeFirst = as.double(includeFirst),
-                    includeLast = as.double(includeLast)
-                    ),
+               calendar,
+               list(includeFirst = as.double(includeFirst),
+                    includeLast = as.double(includeLast)),
                from, to,
                PACKAGE="RQuantLib")
   val <- val[[1]]
   val
 }
-
-
 
 holidayList <- function(calendar="TARGET",
                         from=Sys.Date(),
@@ -153,10 +146,8 @@ holidayList <- function(calendar="TARGET",
   stopifnot(class(from)=="Date")
   stopifnot(class(to)=="Date")
   val <- .Call("QL_holidayList",
-               list(calendar=calendar,
-                    includeWeekends=as.double(includeWeekends),
-                    from=from, to=to
-                    ),               
+               calendar,
+               list(includeWeekends=as.double(includeWeekends), from, to),
                PACKAGE="RQuantLib")
   val
 }
